<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_messageSai">Hello World!</string>
    <string name="ButtonTextSai">I\’m a button</string>
    <string name="TextView1Sai">Login</string>
    <string name="EditText1Sai">login name</string>
    <string name="TextView2Sai">password</string>
    <string name="SwitchTextSai">What does this do?</string>
    <string name="NextSai">Next</string>
    <string name="BackSai">Back</string>
    <string name="HomeSai">Home</string>
    <string name="RadioButton">RadioButton</string>
    <string name="CheckBox">CheckBox</string>
    <string name="LoginbtnSai">Login</string>
    <string name="chatButtonSai">Start Chat!!!!</string>
    <string name="Sendchey">Send</string>
    <string name="chatAct">ChatActivity</string>
    <string name="MainAct">MainActivity</string>
    <string name="ListAct">ListItemsActivity</string>
    <string name="WeatherAct">WeatherForecastActivity</string>
    <string name="CurrentTemp">Current Temperature: 25°C</string>
    <string name="MinTemp">Min Temperature: 20°C</string>
...
    <string name="Menu3">You selected item 3</string>
    <string name="DialogMenuofthree">New Message to display as toast on menu item 1 </string>
    <string name="custdial">Dialog on Button 1</string>
    <string name="About">Version 1.0, by Sai Venkata Akhil</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delbtn">Delete this message</string>
    <string name="chatmsgid">ID: </string>
    <string name="chatmsg">Message: </string>
    <string name="dialogMessage">Do you want to end this Activity?</string>
    <string name="dialogTitle">Attention</string>
    <string name="switchon">Switch is On</string>
    <string name="switchoff">Switch is off</string>
...
