<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/textMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chatmsg"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/textId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textMessage"
        android:text="@string/chatmsgid"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="272dp"
        android:layout_height="53dp"
        android:layout_below="@id/textId"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="590dp"
        android:text="@string/delbtn" />

</RelativeLayout>